estructure todas las paginas

--- a/paginas/certificaciones.html
+++ b/paginas/certificaciones.html
@@ -16,27 +16,27 @@
 <header class="conteiner-fluid">
   <nav class="navbar navbar-expand-lg bg-light">
 <div class="container-fluid">
-  <a class="navbar-brand" href="#">ESCRIBANIA SG</a>
+  <a class="navbar-brand" href="../index.html">ESCRIBANIA SG</a>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contacto</a>
+        <a class="nav-link" href="contacto.html">Contacto</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           Servicios
         </a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Escrituras</a></li>
-          <li><a class="dropdown-item" href="#">Firmas Certificadas</a></li>
+          <li><a class="dropdown-item" href="escrituras.html">Escrituras</a></li>
+          <li><a class="dropdown-item" href="certificaciones.html">Firmas Certificadas</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Otros</a></li>
+          <li><a class="dropdown-item" href="info.html">Info</a></li>
         </ul>
       </li>
       <li class="nav-item">
@@ -56,51 +56,43 @@
 <!-- EMPIEZA EL MAIN CON LAS CARTAS -->
 <main class="d-flex flex-wrap justify-content-center m-5">
 <div class="card m-3" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="../IMAGEN/08.jpg" class="card-img-top" alt="volante de mercedes benz">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">Formularios AutoMotor</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Ir</a>
   </div>
 </div>
 <div class="card m-3" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="../IMAGEN/autorizacion.jpg" class="card-img-top" alt="mama y dos hijos pequenios con fondo de lago y montania">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">Autorizaciones de viaje</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Ir</a>
   </div>
 </div>
 <div class="card m-3" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="../IMAGEN/boletoCompraventa.jpg" class="card-img-top" alt="casas de colores y gran cielo despejado">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
+    <h5 class="card-title">Boletos de Compraventa</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="#" class="btn btn-primary">Ir</a>
   </div>
 </div>
 <div class="card m-3" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="../IMAGEN/casa.jpg" class="card-img-top" alt="llave puesta en puerta de madera">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Contratos de locacion/alquiler</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary">Ir</a>
     </div>
   </div>
   <div class="card m-3" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
+    <img src="../IMAGEN/otrosTramites.jpg" class="card-img-top" alt="hombre de traje en paso de cebra">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Otros</h5>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
-  <div class="card m-3" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <a href="#" class="btn btn-primary">Ir</a>
     </div>
   </div>
 </main>
@@ -110,10 +102,10 @@
 
 <figure class="text-center">
   <blockquote class="blockquote">
-    <p>A well-known quote, contained in a blockquote element.</p>
+    <p>Ante cualquier duda, podes comunicarte con nosotros..</p>
   </blockquote>
   <figcaption class="blockquote-footer">
-    Someone famous in <cite title="Source Title">Source Title</cite>
+    Escribanos <cite title="Source Title">Jose Luis Santos & Camila Goldman.-</cite>
   </figcaption>
 </figure>
 
@@ -123,7 +115,7 @@
 <div class="card mb-3 mx-auto m-5 " style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
+      <img src="../IMAGEN/casa.jpg" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -138,18 +130,23 @@
 
 
 <!-- EMPIEZA EL FOOTER -->
-<footer class="mt-5">
-  <div class="container">
-    <ul class=" list-group list-group-flush ">
-      <li class="list-group-item">An item</li>
-      <li class="list-group-item">A second item</li>
-      <li class="list-group-item">A third item</li>
-      <li class="list-group-item">A fourth item</li>
-    </ul>
-  </div>
 
+<footer class="m-4">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link disabled aria-current="page" href="#">WhatsApp : +54 11 3339 0081</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Telefono : 4374 - 1309</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Mail : escribania1880@gmail.com</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Gracias por elegir Escribania Santos & Goldman. Nuestro horario de atencion es de 11hs a 17hs.</a>
+    </li>
+  </ul>
 </footer>
-
 
 <!-- TERMINA EL FOOTER -->
   </body>
