--- a/paginas/escrituras.html
+++ b/paginas/escrituras.html
@@ -17,17 +17,17 @@
     <header class="conteiner-fluid">
     <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">ESCRIBANIA SG</a>
+    <a class="navbar-brand" href="../IMAGEN/">ESCRIBANIA SG</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contacto</a>
+          <a class="nav-link" href="contacto.html">Contacto</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,7 +37,7 @@
             <li><a class="dropdown-item" href="escrituras.html">Escrituras</a></li>
             <li><a class="dropdown-item" href="certificaciones.html">Firmas Certificadas</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Otros</a></li>
+            <li><a class="dropdown-item" href="info.html">Info</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -58,51 +58,51 @@
 
 <main class="d-flex flex-wrap justify-content-center m-5">
     <div class="card m-3" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="../IMAGEN/sociedades.jpg" class="card-img-top" alt="grupo de gente en una mesa y dos manos estrechandose">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Sociedades</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Ir</a>
       </div>
     </div>
     <div class="card m-3" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="../IMAGEN/casa.jpg" class="card-img-top" alt="llave en puerta de madera">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Compraventas</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Ir</a>
       </div>
     </div>
     <div class="card m-3" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="../IMAGEN/poderes.jpg" class="card-img-top" alt="manos estrechandose">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Poderes</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a href="#" class="btn btn-primary">Ir</a>
       </div>
     </div>
     <div class="card m-3" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="../IMAGEN/fideicomisos.jpg" class="card-img-top" alt="edificio en construccion">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Ir</a>
         </div>
       </div>
       <div class="card m-3" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="../IMAGEN/donaciones.jpg" class="card-img-top" alt="Abuelos y Nietos de espaldas en zona de barcos">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Donaciones</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Ir</a>
         </div>
       </div>
       <div class="card m-3" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="../IMAGEN/otros.jpg" class="card-img-top" alt="buenos aires">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Otros</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Ir</a>
         </div>
       </div>
     </main>
@@ -113,10 +113,10 @@
 
 <figure class="text-center">
   <blockquote class="blockquote">
-    <p>A well-known quote, contained in a blockquote element.</p>
+    <p>Ante cualquier duda, podes comunicarte con nosotros..</p>
   </blockquote>
   <figcaption class="blockquote-footer">
-    Someone famous in <cite title="Source Title">Source Title</cite>
+    Escribanos <cite title="Source Title">Jose Luis Santos & Camila Goldman.-</cite>
   </figcaption>
 </figure>
 
@@ -126,7 +126,7 @@
 <div class="card mb-3 mx-auto m-5 " style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="..." class="img-fluid rounded-start" alt="...">
+      <img src="../IMAGEN/casa.jpg" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -141,18 +141,23 @@
 
 
 <!-- EMPIEZA EL FOOTER -->
-<footer class="mt-5">
-  <div class="container">
-    <ul class=" list-group list-group-flush ">
-      <li class="list-group-item">An item</li>
-      <li class="list-group-item">A second item</li>
-      <li class="list-group-item">A third item</li>
-      <li class="list-group-item">A fourth item</li>
-    </ul>
-  </div>
 
+<footer class="m-4">
+  <ul class="nav justify-content-center">
+    <li class="nav-item">
+      <a class="nav-link disabled aria-current="page" href="#">WhatsApp : +54 11 3339 0081</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Telefono : 4374 - 1309</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Mail : escribania1880@gmail.com</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Gracias por elegir Escribania Santos & Goldman. Nuestro horario de atencion es de 11hs a 17hs.</a>
+    </li>
+  </ul>
 </footer>
-
 
 <!-- TERMINA EL FOOTER -->
   </body>
