--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,31 +12,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </head>
   <body> 
+
     <!-- EMPIEZA LA NAVBAR -->
+
   <header class="conteiner-fluid">
     <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">ESCRIBANIA SG</a>
+    <a class="navbar-brand" href="../index.html">ESCRIBANIA SG</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+          <a class="nav-link" href="contacto.html">Contacto</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Servicios
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="paginas/escrituras.html">Escrituras</a></li>
-            <li><a class="dropdown-item" href="paginas/certificaciones.html">Firmas Certificadas</a></li>
+            <li><a class="dropdown-item" href="escrituras.html">Escrituras</a></li>
+            <li><a class="dropdown-item" href="certificaciones.html">Firmas Certificadas</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="paginas/info.html">Info</a></li>
+            <li><a class="dropdown-item" href="info.html">Info</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -53,53 +55,31 @@
 
 <!-- TERMINA LA NAVBAR -->
 
-<!-- EMPIEZA EL MAIN CON LAS CARTAS -->
-<main class="d-flex flex-wrap justify-content-center m-5">
-<div class="card m-3" style="width: 18rem;">
-  <img src="./IMAGEN/poderes.jpg" class="card-img-top" alt="apreton de manos">
-  <div class="card-body">
-    <h5 class="card-title">ESCRITURAS</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="./paginas/escrituras.html" class="btn btn-primary">Ir a Escrituras</a>
+<!-- EMPIEZA FORMULARIO -->
+
+<div class="m-5">
+  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@mail.com">
+</div>
+<div class="m-5">
+  <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+  <input type="Asunto" class="form-control" id="exampleFormControlInput1" placeholder="Ej: Venta, Autorizacion, Contrato de alquiler...">
+</div>
+<div class="m-5">
+  <label for="exampleFormControlTextarea1" class="form-label">Dejanos aca tu consulta..</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  <div class="col-auto m-5">
+    <button type="submit" class="btn btn-primary mb-3">Enviar</button>
   </div>
 </div>
-<div class="card m-3" style="width: 18rem;">
-  <img src="./IMAGEN/firmas.jpg" class="card-img-top" alt="mano de mujer firmando con pluma">
-  <div class="card-body">
-    <h5 class="card-title">CERTIFICACIONES</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="./paginas/certificaciones.html" class="btn btn-primary">Ir a Certificaciones</a>
-  </div>
-</div>
-<div class="card m-3" style="width: 18rem;">
-   <img src="./IMAGEN/otrosTramites.jpg" class="card-img-top" alt="mano de mujer firmando con pluma">
-   <div class="card-body">
-    <h5 class="card-title">OTROS TRAMITES</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="./paginas/certificaciones.html" class="btn btn-primary">Ir a Otros</a>
-   </div>
-</div>
-</main>
-<!-- TERMINA EL MAIN CON LAS CARTAS -->
 
-<!-- EMPIEZA UNA SECCION CON TEXTO -->
+<!-- TERMINA FORMULARIO -->
 
-<figure class="text-center">
-  <blockquote class="blockquote">
-    <p>A well-known quote, contained in a blockquote element.</p>
-  </blockquote>
-  <figcaption class="blockquote-footer">
-    Someone famous in <cite title="Source Title">Source Title</cite>
-  </figcaption>
-</figure>
-
-<!-- TERMINA SECCION CON TEXTO -->
-
-<!-- OTRA CARTA EMPIEZA-->
+<!-- CARTA EMPIEZA-->
 <div class="card mb-3 mx-auto m-5 " style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="IMAGEN/casa.jpg" class="img-fluid rounded-start" alt="...">
+      <img src="../IMAGEN/casa.jpg" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -110,10 +90,23 @@
     </div>
   </div>
 </div>
-<!-- OTRA CARTA TERMINA -->
+<!--CARTA TERMINA -->
 
+<!-- EMPIEZA UNA SECCION CON TEXTO -->
+
+<figure class="text-center m-3">
+  <blockquote class="blockquote">
+    <p>Gracias comunicarte</p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Escribanos <cite title="Source Title">Jose Luis Santos & Camila Goldman.-</cite>
+  </figcaption>
+</figure>
+
+<!-- TERMINA SECCION CON TEXTO -->
 
 <!-- EMPIEZA EL FOOTER -->
+
 <footer class="m-4">
   <ul class="nav justify-content-center">
     <li class="nav-item">
@@ -130,7 +123,6 @@
     </li>
   </ul>
 </footer>
-
 
 <!-- TERMINA EL FOOTER -->
   </body>
