--- a/paginas/info.html
+++ b/paginas/info.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
-   
+  <head>   
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
@@ -16,27 +15,27 @@
   <header class="conteiner-fluid">
     <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">ESCRIBANIA SG</a>
+    <a class="navbar-brand" href="../index.html">ESCRIBANIA SG</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+          <a class="nav-link" href="contacto.html">Contacto</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Servicios
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="paginas/escrituras.html">Escrituras</a></li>
-            <li><a class="dropdown-item" href="paginas/certificaciones.html">Firmas Certificadas</a></li>
+            <li><a class="dropdown-item" href="escrituras.html">Escrituras</a></li>
+            <li><a class="dropdown-item" href="certificaciones.html">Firmas Certificadas</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="paginas/info.html">Info</a></li>
+            <li><a class="dropdown-item" href="info.html">Info</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -53,53 +52,43 @@
 
 <!-- TERMINA LA NAVBAR -->
 
-<!-- EMPIEZA EL MAIN CON LAS CARTAS -->
-<main class="d-flex flex-wrap justify-content-center m-5">
-<div class="card m-3" style="width: 18rem;">
-  <img src="./IMAGEN/poderes.jpg" class="card-img-top" alt="apreton de manos">
-  <div class="card-body">
-    <h5 class="card-title">ESCRITURAS</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="./paginas/escrituras.html" class="btn btn-primary">Ir a Escrituras</a>
+<!-- TEXTO -->
+  <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-light p-3 rounded-2 m-5" tabindex="0">
+    <h4 id="scrollspyHeading1">Titulo Primero</h4>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+      when an unknown printer took a galley of type and scrambled it to make a type 
+      specimen book. It has survived not only five centuries, but also the leap into 
+      electronic typesetting, remaining essentially unchanged. </p>
+    <h4 id="scrollspyHeading2">Este seria el Segundo titulo</h4>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+      when an unknown printer took a galley of type and scrambled it to make a type 
+      specimen book. It has survived not only five centuries, but also the leap into 
+      electronic typesetting, remaining essentially unchanged. It was popularised in the 
+      1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
+      recently with desktop publishing software like Aldus PageMaker including versions of
+       Lorem Ipsum.</p>
+    <h4 id="scrollspyHeading3">Tercero</h4>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+      when an unknown printer took a galley of type and scrambled.</p>
+    <h4 id="scrollspyHeading4">Un cuarto Titulo</h4>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+      when an unknown printer took a galley of type and scrambled it to make a type 
+      specimen book.</p>
+    <h4 id="scrollspyHeading5">El Ultimo</h4>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
   </div>
-</div>
-<div class="card m-3" style="width: 18rem;">
-  <img src="./IMAGEN/firmas.jpg" class="card-img-top" alt="mano de mujer firmando con pluma">
-  <div class="card-body">
-    <h5 class="card-title">CERTIFICACIONES</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="./paginas/certificaciones.html" class="btn btn-primary">Ir a Certificaciones</a>
-  </div>
-</div>
-<div class="card m-3" style="width: 18rem;">
-   <img src="./IMAGEN/otrosTramites.jpg" class="card-img-top" alt="mano de mujer firmando con pluma">
-   <div class="card-body">
-    <h5 class="card-title">OTROS TRAMITES</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="./paginas/certificaciones.html" class="btn btn-primary">Ir a Otros</a>
-   </div>
-</div>
-</main>
-<!-- TERMINA EL MAIN CON LAS CARTAS -->
-
-<!-- EMPIEZA UNA SECCION CON TEXTO -->
-
-<figure class="text-center">
-  <blockquote class="blockquote">
-    <p>A well-known quote, contained in a blockquote element.</p>
-  </blockquote>
-  <figcaption class="blockquote-footer">
-    Someone famous in <cite title="Source Title">Source Title</cite>
-  </figcaption>
-</figure>
-
-<!-- TERMINA SECCION CON TEXTO -->
+<!-- TEXTO TERMINA -->
 
 <!-- OTRA CARTA EMPIEZA-->
 <div class="card mb-3 mx-auto m-5 " style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="IMAGEN/casa.jpg" class="img-fluid rounded-start" alt="...">
+      <img src="../IMAGEN/casa.jpg" class="img-fluid rounded-start" alt="...">
     </div>
     <div class="col-md-8">
       <div class="card-body">
@@ -112,8 +101,22 @@
 </div>
 <!-- OTRA CARTA TERMINA -->
 
+<!-- EMPIEZA UNA SECCION CON TEXTO -->
+
+<figure class="text-center m-3">
+  <blockquote class="blockquote">
+    <p>Ante cualquier duda, podes comunicarte con nosotros..</p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Escribanos <cite title="Source Title">Jose Luis Santos & Camila Goldman.-</cite>
+  </figcaption>
+</figure>
+
+<!-- TERMINA SECCION CON TEXTO -->
+
 
 <!-- EMPIEZA EL FOOTER -->
+
 <footer class="m-4">
   <ul class="nav justify-content-center">
     <li class="nav-item">
@@ -130,7 +133,6 @@
     </li>
   </ul>
 </footer>
-
 
 <!-- TERMINA EL FOOTER -->
   </body>
