corregi unos errores de tipeo

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
 
 <!-- EMPIEZA UNA SECCION CON TEXTO -->
 
-<figure class="text-center">
+<figure class="text-center m-3">
   <blockquote class="blockquote">
-    <p>A well-known quote, contained in a blockquote element.</p>
+    <p>Ante cualquier duda, podes comunicarte con nosotros..</p>
   </blockquote>
   <figcaption class="blockquote-footer">
-    Someone famous in <cite title="Source Title">Source Title</cite>
+    Escribanos <cite title="Source Title">Jose Luis Santos & Camila Goldman.-</cite>
   </figcaption>
 </figure>
 
