--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -96,7 +96,7 @@
 
 <figure class="text-center m-3">
   <blockquote class="blockquote">
-    <p>Gracias comunicarte</p>
+    <p>Gracias por comunicarte</p>
   </blockquote>
   <figcaption class="blockquote-footer">
     Escribanos <cite title="Source Title">Jose Luis Santos & Camila Goldman.-</cite>
